# logstash-vector

./: .gitignore  CLAUDE.md  test-debug-extraction.py  test-debug-grammar.py  test-debug-parser.py  test-full-regex-flow.py  test-plugin-regex.py  test-regex-debug.py
lv-py/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_parser_direct.py
lv-py/src/lv_py/: api.py  cli.py  migration.py
lv-py/src/lv_py/generator/: toml_generator.py
lv-py/src/lv_py/models/: __init__.py  logstash_config.py  migration_report.py  vector_config.py
lv-py/src/lv_py/parser/: logstash_parser.py  logstash_parser_regex.py
lv-py/src/lv_py/transformers/: __init__.py  base.py  filters.py  inputs.py  outputs.py
lv-py/src/lv_py/utils/: file_utils.py  validation.py
lv-py/tests/: __init__.py
lv-py/tests/integration/: conftest.py  docker-compose.yml  test_functional_equivalence.py  test_migration_e2e.py  test_unsupported_features.py  test_validation.py
lv-py/tests/integration/data/: apache-logs.txt  sample-logs.json
lv-py/tests/integration/logstash/: complex-pipeline.conf  grok-filter.conf  mixed-support.conf  unsupported-filter.conf  unsupported-input.conf
lv-py/tests/integration/test_data/logstash/: beats-input.conf  date-filter.conf  elasticsearch-output.conf  (+3 more)
lv-py/tests/integration/vector/: beats-input.toml  date-filter.toml  elasticsearch-output.toml  mixed-support.toml  mutate-filter.toml  unsupported-filter.toml  unsupported-input.toml
lv-py/tests/unit/: __init__.py  test_api.py  test_cli.py  test_generator.py  test_models.py  test_parser.py  test_transformers.py
(+43 files in other folders)
