[project]
name = "lv-py"
version = "0.1.0"
description = "Logstash to Vector configuration migration tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Logstash-Vector Migration Tool Contributors"}
]
dependencies = [
    "pyparsing>=3.1.0",
    "tomlkit>=0.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-docker-compose>=3.2.0",
    "testcontainers>=3.7.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
lv-py = "lv_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["lv_py"]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
